fixtures/frontend/milestone-2/invalid/source-option-imported-binding-mismatch/aivi/network.aivi
val http : Text = "http"

export http
